# Mazer-sdl2-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  README.md  cmake_install.cmake
Mazer-sdl/: CMakeLists.txt  Coordinate.h  Graphics.cpp  Graphics.h  Maze.cpp  Maze.h  Mazer-sdl.cpp  PixelBuffer.cpp  PixelBuffer.h  PixelEngine.cpp  PixelEngine.h  Tile.h
Mazer-sdl/Engine/: IEngine.h  SDLDrawing.cpp  SDLInput.cpp  SDLInput.h  SDLWindow.cpp
Mazer-sdl/depedencies/SDL2/include/: SDL_hints.h
cmake/: backup.txt
src/: Maze.cpp  Maze.h  Mazer-sdl.cpp  Mazer-sdl.h  PixelBuffer.h  PixelEngine.cpp  PixelEngine.h  Tile.h
src/Engine/: GraphicsFactory.cpp  GraphicsFactory.h  IDrawing.h  IInput.h  IWindow.h  SDLDrawing.cpp  SDLDrawing.h  SDLWindow.cpp  SDLWindow.h
